main <small> fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -19,7 +19,8 @@
         display: flex;
         align-items: center;
         gap: .5rem;
-        color: $grayish-blue;
+        // color: $grayish-blue;
+        color: #555962;
         font-size: .8rem;
 
         span {
